# codex-dashboard

./: README.md  pyproject.toml
codex_dashboard/: __init__.py  approval_bridge.py  parser.py  server.py
codex_dashboard/static/: app.js  styles.css  utils.js
codex_dashboard/static/components/: base.js  conversation-message.js  dashboard.js  live-approval-panel.js  project-group.js  session-card.js  session-dialog.js
codex_dashboard/templates/: index.html
