[project]
name = "codex-dashboard"
version = "0.1.0"
description = "Local web dashboard for Codex task status"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "pydantic>=2",
    "uvicorn>=0.30",
]

[project.scripts]
codex-dashboard = "codex_dashboard.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
codex_dashboard = ["templates/*.html", "static/*.css", "static/*.js", "static/components/*.js"]
